--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   get_it: ^7.7.0
   iconsax: ^0.0.8
   shared_preferences: ^2.2.3
+  flutter_svg: ^2.0.10+1
+  device_preview: ^1.1.0
+  dartz: ^0.10.1
+
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -54,9 +58,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
