--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   iconsax: ^0.0.8
   shared_preferences: ^2.2.3
   flutter_svg: ^2.0.10+1
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
