finsh Ui for Luncher feature

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   get_it: ^7.7.0
   iconsax: ^0.0.8
   shared_preferences: ^2.2.3
+  url_launcher: ^6.2.6
+  youtube_player_flutter: ^9.0.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
