--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   dartz: ^0.10.1
   dio: ^5.4.3+1
   equatable: ^2.0.5
+  firebase_core: ^2.31.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
@@ -41,6 +42,8 @@ dependencies:
   get_it: ^7.7.0
   iconsax: ^0.0.8
   shared_preferences: ^2.2.3
+  url_launcher: ^6.2.6
+  youtube_player_flutter: ^9.0.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
